--- a/config/manifest.json
+++ b/config/manifest.json
@@ -35,37 +35,17 @@
   "chunk/33.js": "/public/js/chunk/33.js",
   "chunk/34.js": "/public/js/chunk/34.js",
   "chunk/35.js": "/public/js/chunk/35.js",
-  "chunk/36.js": "/public/js/chunk/36.js",
-  "chunk/37.js": "/public/js/chunk/37.js",
-  "chunk/38.js": "/public/js/chunk/38.js",
-  "about/about.js": "/public/js/chunk/about/about.js",
-  "admin/home/home.js": "/public/js/chunk/admin/home/home.js",
-  "admin/login/login.js": "/public/js/chunk/admin/login/login.js",
-  "admin1/main.js": "/public/js/chunk/admin1/main.js",
-  "category/category.js": "/public/js/chunk/category/category.js",
   "common.js": "/public/js/chunk/common.js",
+  "admin/main.js": "/public/js/chunk/admin/main.js",
   "index/index.js": "/public/js/chunk/index/index.js",
   "runtime.js": "/public/js/runtime.js",
-  "font/element-icons.ttf": "/public/font/element-icons.ttf",
-  "font/element-icons.woff": "/public/font/element-icons.woff",
-  "font/fontawesome-webfont.eot?v=4.7.0": "/public/font/fontawesome-webfont.eot",
-  "font/fontawesome-webfont.ttf?v=4.7.0": "/public/font/fontawesome-webfont.ttf",
-  "font/fontawesome-webfont.woff?v=4.7.0": "/public/font/fontawesome-webfont.woff",
-  "font/fontawesome-webfont.woff2?v=4.7.0": "/public/font/fontawesome-webfont.woff2",
-  "font/glyphicons-halflings-regular.eot": "/public/font/glyphicons-halflings-regular.eot",
-  "font/glyphicons-halflings-regular.ttf": "/public/font/glyphicons-halflings-regular.ttf",
-  "font/glyphicons-halflings-regular.woff": "/public/font/glyphicons-halflings-regular.woff",
-  "font/glyphicons-halflings-regular.woff2": "/public/font/glyphicons-halflings-regular.woff2",
   "font/iconfont.eot?t=1541579316141": "/public/font/iconfont.eot",
   "font/iconfont.ttf?t=1541579316141": "/public/font/iconfont.ttf",
   "font/ionicons.ttf?v=3.0.0": "/public/font/ionicons.ttf",
   "font/ionicons.woff?v=3.0.0": "/public/font/ionicons.woff",
-  "img/egg-vue-webpack-dev.png": "/public/img/egg-vue-webpack-dev.png",
   "img/error-401.svg": "/public/img/error-401.svg",
   "img/error-404.svg": "/public/img/error-404.svg",
   "img/error-500.svg": "/public/img/error-500.svg",
-  "img/fontawesome-webfont.svg?v=4.7.0": "/public/img/fontawesome-webfont.svg",
-  "img/glyphicons-halflings-regular.svg": "/public/img/glyphicons-halflings-regular.svg",
   "img/icon-qr-qq-wechat.png": "/public/img/icon-qr-qq-wechat.png",
   "img/icon-social-bilibili.svg": "/public/img/icon-social-bilibili.svg",
   "img/icon-social-twitter.svg": "/public/img/icon-social-twitter.svg",
@@ -75,45 +55,12 @@
   "img/loading.gif": "/public/img/loading.gif",
   "img/login-bg.jpg": "/public/img/login-bg.jpg",
   "img/logo.jpg": "/public/img/logo.jpg",
-  "img/logo.png": "/public/img/logo.png",
   "deps": {
-    "about/about.js": {
+    "admin/main.js": {
       "js": [
         "/public/js/runtime.js",
         "/public/js/chunk/common.js",
-        "/public/js/chunk/about/about.js"
-      ],
-      "css": []
-    },
-    "admin/home/home.js": {
-      "js": [
-        "/public/js/runtime.js",
-        "/public/js/chunk/common.js",
-        "/public/js/chunk/admin/home/home.js"
-      ],
-      "css": []
-    },
-    "admin/login/login.js": {
-      "js": [
-        "/public/js/runtime.js",
-        "/public/js/chunk/common.js",
-        "/public/js/chunk/admin/login/login.js"
-      ],
-      "css": []
-    },
-    "admin1/main.js": {
-      "js": [
-        "/public/js/runtime.js",
-        "/public/js/chunk/common.js",
-        "/public/js/chunk/admin1/main.js"
-      ],
-      "css": []
-    },
-    "category/category.js": {
-      "js": [
-        "/public/js/runtime.js",
-        "/public/js/chunk/common.js",
-        "/public/js/chunk/category/category.js"
+        "/public/js/chunk/admin/main.js"
       ],
       "css": []
     },
