--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "autod-egg": "^1.0.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "easywebpack-cli": "^4.0.0",
