--- a/config/manifest.json
+++ b/config/manifest.json
@@ -35,8 +35,12 @@
   "chunk/33.js": "/public/js/chunk/33.js",
   "chunk/34.js": "/public/js/chunk/34.js",
   "chunk/35.js": "/public/js/chunk/35.js",
-  "common.js": "/public/js/chunk/common.js",
+  "chunk/36.js": "/public/js/chunk/36.js",
+  "chunk/37.js": "/public/js/chunk/37.js",
+  "chunk/38.js": "/public/js/chunk/38.js",
+  "chunk/39.js": "/public/js/chunk/39.js",
   "admin/main.js": "/public/js/chunk/admin/main.js",
+  "common.js": "/public/js/chunk/common.js",
   "index/index.js": "/public/js/chunk/index/index.js",
   "runtime.js": "/public/js/runtime.js",
   "font/iconfont.eot?t=1541579316141": "/public/font/iconfont.eot",
