--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "egg-bin": "^4.3.7",
     "egg-cors": "^2.0.0",
     "egg-logger": "^1.5.0",
+    "egg-passport": "^2.0.1",
+    "egg-passport-local": "^1.2.1",
     "egg-scripts": "^2.5.1",
     "egg-sequelize": "^4.3.1",
     "egg-validate": "^1.0.0",
@@ -42,6 +44,7 @@
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.17.1",
     "mysql2": "^1.6.5",
+    "passport-local": "^1.0.0",
     "shortid": "^2.2.8",
     "showdown": "^1.8.6",
     "simplemde": "^1.11.2",
