--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "egg-scripts": "^2.5.1",
     "egg-sequelize": "^4.3.1",
     "egg-validate": "^1.0.0",
+    "egg-view-ejs": "^2.0.0",
     "egg-view-vue-ssr": "^3.0.5",
     "element-ui": "^2.0.8",
     "extend": "~3.0.0",
